# ezdxf-geometric-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
ezdxf_geometric_analysis/: __init__.py  cli.py  extraction.py  furniture.py  payload.py  pipeline.py  semantics.py  spatial.py  topology.py
notebooks/: analysis.ipynb
tests/: test_furniture.py  test_known_issues.py  test_semantics_spatial.py  test_topology.py
